<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/distance_to_destination_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/default_distance_to_destination"
        android:textSize="@dimen/distance_info_text_size"
        android:background="@drawable/popup_background"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/arrow_pointer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/simple_arrow"
        app:layout_constraintHeight_percent="0.08"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:contentDescription="@string/arrow_pointer_description" />

    <ImageView
        android:id="@+id/compass"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:contentDescription="@string/compass_description"
        android:src="@drawable/compass"
        android:adjustViewBounds="true"/>

    <Button
        android:id="@+id/popup_widow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_destination_text"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"/>

</LinearLayout>